tests/integration/errors/test_interceptor_wrong_third_param.sn
# Error test: interceptor handler with wrong third parameter type

fn badHandler(name: str, args: any[], continue_fn: fn(int): any): any =>
    return continue_fn(0)

fn main(): void =>
    Interceptor.register(badHandler)
